# real-estate-pipeline-openenv

./: .dockerignore  DEAL_CLOSURE_ARCHITECTURE.md  DEAL_CLOSURE_IMPLEMENTATION_GUIDE.md  DEAL_CLOSURE_PROCESS_FLOW.md  DEAL_CLOSURE_QUICK_START.md  DEAL_CLOSURE_SUMMARY.md  DELIVERY_SUMMARY.md  DOCKER_CACHE_STRATEGY.md  DOCKER_QUICK_REFERENCE.md  Dockerfile  IMPLEMENTATION_COMPLETE_CACHE_STRATEGY.md  MERGED_REAL_ESTATE_IDEA.md  PROJECT_IDEA.md  README.md  README_DEAL_CLOSURE.md  REFERENCE_DOCUMENT.md  app.py  build-docker.ps1  build-docker.sh  comprehensive_grader_test.py  inference.py  openenv.yaml  pre-push-hook.bat  pyproject.toml  requirements.txt  test_graders_docker.py
.github/workflows/: docker-build.yml
artifacts/: training_data.jsonl  training_steps.jsonl  training_tasks.jsonl
artifacts/models/: action_model.json  category_model.json  metrics.json
real_estate_pipeline/: __init__.py  cab_booking.py  cab_customer_flow.py  call_flow.py  env.py  graders.py  live_simulator.py  models.py  policy.py  rewards.py  tasks.py  training_data.py
real_estate_pipeline/eval_fixtures/: commercial_budget_stretch.json  commercial_missing_square_feet.json  residential_ambiguous_budget.json  residential_noisy_whatsapp_style.json
real_estate_pipeline/fixtures/: commercial_lease_strategy.json  (+2 more)
scripts/: generate_training_data.py  stream_live_traffic.py  train_baseline_models.py  validate-submission.sh
server/: __init__.py  app.py  graders.py
tests/: test_cab_booking.py  test_env.py  test_graders.py  test_live_simulator.py  test_policy_and_training_data.py
