[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "real-estate-pipeline-openenv"
version = "0.1.0"
description = "OpenEnv-style real estate pipeline environment with residential and commercial workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "openenv-core>=0.2.0",
  "openai==2.30.0",
  "pydantic==2.11.7",
  "PyYAML==6.0.2",
  "uvicorn==0.35.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["real_estate_pipeline"]
